# icfp2023

./: .gitignore  CMakeLists.txt  Makefile  README.md
lib/: cgal_calc.hpp  greedy_optimizer.hpp  optimizer.hpp  optimizer_state.hpp  problem.hpp  solution.hpp  stage.hpp  visualization.hpp
src/: cgal_calc.cpp  greedy_optimizer.cpp  optimizer.cpp  optimizer_state.cpp  problem.cpp  solution.cpp  solver1.cpp  solver2.cpp  visualization.cpp
test/: score_calc_test.cpp
